stable/morning-glory/templates/be-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: be-netpol
  namespace: mogle
spec:
  podSelector:
    matchLabels:
      app: morning-glory-backend
  policyTypes:
    - Ingress
    # - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: mogle-frontend
          namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: mogle
