stable/morning-glory/templates/db-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-netpol
  namespace: mogle
spec:
  podSelector:
    matchLabels:
      app: postgres # arg
  policyTypes:
    - Ingress
    - Egress
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: morning-glory-backend
        namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: mogle
    ports:
      - protocol: TCP
        port: 5432 # arg
  egress:
  - to:        
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: mogle
