stable/morning-glory/templates/fe-netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: fe-netpol
  namespace: mogle
spec:
  podSelector:
    matchLabels:
      app: mogle-frontend
  policyTypes:
    - Ingress
  ingress:
    - from:        
      - ipBlock:
          cidr: 192.168.0.0/16
